--- a/Sentiment Analysts.ipynb
+++ b/Sentiment Analysts.ipynb
@@ -634,7 +634,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "import ."
+   ]
   },
   {
    "cell_type": "code",
